// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#dcdcdd",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": undefined,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": null,
        }
      }
      style={
        Object {
          "borderColor": "#1985a1",
          "borderRadius": 100,
          "borderWidth": 3,
          "height": 200,
          "marginBottom": 160,
          "width": 200,
        }
      }
    />
  </View>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Organization"
    rejectResponderTermination={true}
    style={
      Object {
        "borderColor": "#1985a1",
        "borderRadius": 2,
        "borderWidth": 0.7,
        "fontSize": 17,
        "height": 60,
        "marginTop": 10,
        "padding": 10,
        "textAlign": "center",
        "width": 290,
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Username"
    rejectResponderTermination={true}
    style={
      Object {
        "borderColor": "#1985a1",
        "borderRadius": 2,
        "borderWidth": 0.7,
        "fontSize": 17,
        "height": 60,
        "marginTop": 10,
        "padding": 10,
        "textAlign": "center",
        "width": 290,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1985a1",
        "borderRadius": 2,
        "height": 65,
        "marginBottom": 50,
        "marginTop": 30,
        "opacity": 0.7,
        "width": 290,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 19,
          "padding": 17,
        }
      }
    >
      Done
    </Text>
  </View>
</View>
`;

exports[`renders correctly 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#dcdcdd",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": undefined,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "height": 210,
        "marginLeft": 20,
        "width": 210,
      }
    }
  />
  <Text
    style={
      Object {
        "fontFamily": "sans-serif-thin",
        "fontSize": 55,
        "marginBottom": 160,
        "textAlign": "center",
      }
    }
  >
    SPARK
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Enter your email"
    rejectResponderTermination={true}
    style={
      Object {
        "borderColor": "#1985a1",
        "borderRadius": 2,
        "borderWidth": 0.7,
        "fontSize": 17,
        "height": 60,
        "marginTop": 10,
        "padding": 10,
        "textAlign": "center",
        "width": 290,
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1985a1",
        "borderRadius": 2,
        "height": 65,
        "marginBottom": 50,
        "marginTop": 30,
        "opacity": 0.7,
        "width": 290,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 19,
          "padding": 17,
        }
      }
    >
      Continue
    </Text>
  </View>
</View>
`;
